crates/tests/libs/bindgen/data/error/method_out_with_args/input.rdl

#[win32]
mod Test {
    interface IFoo {
        fn Method(&self, #[out(42)] output: i32);
    }
}
        